# sun

./: .gitignore  AGENTS.md  CMakeLists.txt  DOCS.md  NODES.md  README.md  SON.md  STYLE.md
.cache/clangd/index/: canonicalizer.cpp.C9C6D6CC8DE32989.idx  canonicalizer.hpp.DF3B1669D782B680.idx  evaluator.cpp.3B238C15F50C37C9.idx  evaluator.hpp.B1DBF1FA59AE358B.idx  graph.cpp.A5CA5459BB63846B.idx  graph.hpp.2FFC7B4D1E204CCB.idx  heap.cpp.06353B2B6C5344C6.idx  heap.hpp.E409FB0E6E085B84.idx  interpreter.cpp.25035C4C28089D5B.idx  interpreter.hpp.EA6F8B13D3B224BF.idx  logging.cpp.2E323EF6A124041A.idx  logging.hpp.236679C08CD8ADC9.idx  node.cpp.A0BA033E5420CF15.idx  node.hpp.1B3F1A85D9300692.idx  opcode.cpp.18FE8AF59B8201BF.idx  opcode.hpp.3842741D5EE58E1B.idx  outcome.cpp.7E913643893A4700.idx  outcome.hpp.A903CB9C2061EE9E.idx  parser.cpp.8F69EB8AD69352E3.idx  parser.hpp.55964CD8E2677953.idx  suni.cpp.0668E049A758A2AF.idx  test_conditionals.cpp.765F6FA9C1BDF23B.idx  test_graph.cpp.073C9B932B7CF6A5.idx  test_heap.cpp.6D8A3B1A700AAA85.idx  test_interpreter.cpp.A8A624AA71D754AC.idx  test_memory.cpp.8B37A3DE07BD564B.idx  test_node.cpp.032360CBE0DDE556.idx  test_opcode.cpp.CD9B51732348AA50.idx  test_parser.cpp.77925D6A7CF2AF89.idx  test_simple_add.cpp.388BBD7354BFC571.idx  test_value.cpp.FD9E4B77F38985C9.idx  types.cpp.8AF38B1A105C5305.idx  types.hpp.F5834D34A1E5A1E3.idx  value.cpp.7A8A21D0FD205BC7.idx  value.hpp.B28A2E0C1507B11C.idx
cmake/: FindPugixml.cmake
include/suntv/igv/: canonicalizer.hpp  igv_util.hpp  java2igv.hpp  parser.hpp
include/suntv/interp/: evaluator.hpp  heap.hpp  interpreter.hpp  outcome.hpp  value.hpp
include/suntv/ir/: graph.hpp  node.hpp  opcode.hpp  types.hpp
include/suntv/util/: cxxopts.hpp  logging.hpp
scripts/: generate_all_igv.sh  java2igv.sh
src/: CMakeLists.txt
src/igv/: canonicalizer.cpp  igv_util.cpp  java2igv.cpp  parser.cpp
src/interp/: evaluator.cpp  heap.cpp  interpreter.cpp  outcome.cpp  value.cpp
src/ir/: graph.cpp  node.cpp  opcode.cpp  types.cpp
src/util/: logging.cpp
tests/: CMakeLists.txt  debug_array_sum.cpp
tests/fixtures/: README.md  simple_add.xml  simple_return.xml
tests/fixtures/igv/: Abs.xml  ArraySum.xml  BinarySearch.xml  BubbleSort.xml  Factorial.xml  Fibonacci.xml  GCD.xml  IsPrime.xml  LinearSearch.xml  Max.xml  Power.xml  Sign.xml
tests/fixtures/java/: Abs.java  ArraySum.java  BinarySearch.java  BubbleSort.java  Factorial.java  Fibonacci.java  GCD.java  IsPrime.java  LinearSearch.java  MatrixMultiply.java  Max.java  Power.java  Sign.java
tests/integration/: test_algorithms.cpp  test_conditionals.cpp  test_memory.cpp  test_real_igv.cpp  test_simple_add.cpp
tests/unit/igv/: test_igv_util.cpp  test_parser.cpp
tests/unit/interp/: test_algorithms.cpp  test_control_flow.cpp  test_heap.cpp  test_interpreter.cpp  test_memory.cpp  test_proj.cpp  test_value.cpp
tests/unit/ir/: test_graph.cpp  test_node.cpp  test_opcode.cpp
tools/: CMakeLists.txt  suni.cpp  sunigv.cpp
